# Mia_Android

./: .gitignore  LICENSE  README.md  template.py
.github/: FUNDING.yml
in/: gradle.properties
in/app/: build.gradle
in/app/jni/: CMakeLists.txt
in/app/src/main/: AndroidManifest.xml
in/app/src/main/java/de/horsimann/mia/: Main.java
